--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eslipv2",
+  "name": "prasert-charoenyont",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,13 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.5",
     "@line/liff": "^2.23.2",
+    "@radix-ui/themes": "^3.1.1",
+    "@supabase/supabase-js": "^2.45.0",
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/preact": "^3.2.4",
+    "@types/crypto-js": "^4.2.2",
     "@types/jest": "^29.5.12",
     "@types/mocha": "^10.0.6",
     "@types/prop-types": "^15.7.12",
     "@types/react-dom": "^18.3.0",
+    "axios": "^1.7.2",
+    "crypto-js": "^4.2.0",
     "jest": "^29.7.0",
     "preact": "^10.19.6",
     "prop-types": "^15.8.1",
