--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.13.0",
+    "@cloudinary/url-gen": "^1.20.0",
     "@heroicons/react": "^2.1.5",
     "@line/liff": "^2.23.2",
     "@radix-ui/themes": "^3.1.1",
@@ -20,8 +22,11 @@
     "@types/mocha": "^10.0.6",
     "@types/prop-types": "^15.7.12",
     "@types/react-dom": "^18.3.0",
+    "add": "^2.0.6",
     "axios": "^1.7.2",
     "crypto-js": "^4.2.0",
+    "dayjs": "^1.11.12",
+    "googleapis": "^140.0.1",
     "jest": "^29.7.0",
     "preact": "^10.19.6",
     "prop-types": "^15.8.1",
