--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.7.2",
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.12",
+    "emailjs-com": "^3.2.0",
     "googleapis": "^140.0.1",
     "jest": "^29.7.0",
     "preact": "^10.19.6",
