--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "jest": "^29.7.0",
     "preact": "^10.19.6",
     "prop-types": "^15.8.1",
-    "react-router-dom": "^6.23.1",
+    "react-router-dom": "6",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
