--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@cloudinary/url-gen": "^1.20.0",
     "@heroicons/react": "^2.1.5",
     "@line/liff": "^2.23.2",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/themes": "^3.1.1",
     "@supabase/supabase-js": "^2.45.0",
     "@testing-library/jest-dom": "^6.4.6",
