--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "prop-types": "^15.8.1",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "6",
+    "react-tiny-virtual-list": "^2.2.0",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
